syntax = "proto3";

package vco.schemas;

message MediaManifest {
  string schema = 1;
  string title = 2;
  string summary = 3;
  string show_notes = 4; // Markdown / Description
  bytes content_cid = 5; // Points to a SequenceManifest (for large media) or raw data
  bytes thumbnail_cid = 6;
  bytes transcript_cid = 7;
  uint64 duration_ms = 8;
  uint64 published_at_ms = 9;
  bytes previous_item_cid = 10; // For sequential linking (history)
  string content_type = 11; // e.g. audio/mpeg, video/mp4
}
